--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -1,1 +1,6 @@
 // This is an empty scss file for your custom styles - Please add your super duper awesome mega design styles here
+
+h1 {
+    font-size: 4.5rem; 
+    color: blue;
+}
